feat: add customer get_by_id flow base file
